Change from getFirst() to get(0).